# dbpp

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  empty_example.cpp  example1.cpp  head.cpp  tail.cpp
include/dbpp/: dbpp.hpp
source/: common.hpp  dbpp.cpp  odbc_db.hpp  sqlite_db.cpp  sqlite_db.hpp
test/: CMakeLists.txt
test/source/: dbpp_test.cpp
